<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:columnCount="3"
    android:rowCount="4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text0"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/note_Ab"
        android:layout_gravity="fill"
        android:gravity="center"
        android:background="#FF9933"

        android:onClick="onClick"
        android:clickable="true"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/text1"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/note_A"
        android:layout_gravity="fill"
        android:gravity="center"
        android:background="#ffc233"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/text2"
        android:layout_column="2"
        android:layout_gravity="fill"
        android:gravity="center"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:text="@string/note_Bb"
        android:background="#ffcf33"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/text3"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="1"
        android:layout_gravity="fill"
        android:gravity="center"
        android:text="@string/note_B"
        android:background="#ffc233"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/text4"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="1"
        android:layout_gravity="fill"
        android:gravity="center"
        android:text="@string/note_C"
        android:background="#ffdd33"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/text5"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_row="1"
        android:layout_gravity="fill"
        android:gravity="center"
        android:text="@string/note_Cs"
        android:background="#ffe433"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/text6"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="2"
        android:layout_gravity="fill"
        android:gravity="center"
        android:text="@string/note_D"
        android:background="#89e533"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/text7"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="2"
        android:layout_gravity="fill"
        android:gravity="center"
        android:text="@string/note_Eb"
        android:background="#3ef563"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/text8"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_row="2"
        android:layout_gravity="fill"
        android:gravity="center"
        android:text="@string/note_E"
        android:background="#33bc81"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/text9"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="3"
        android:layout_gravity="fill"
        android:gravity="center"
        android:text="@string/note_F"
        android:background="#33c2ff"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/text10"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="3"
        android:layout_gravity="fill"
        android:gravity="center"
        android:text="@string/note_Fs"
        android:background="#337eff"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/text11"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_row="3"
        android:layout_gravity="fill"
        android:gravity="center"
        android:text="@string/note_G"
        android:background="#3358ff"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>
</GridLayout>